--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -70,8 +70,8 @@
             </ul>
 
 
-          <p class="resume-item-copy">{{ education.summary }}</p> -->
-        </div>
+          <p class="resume-item-copy">{{ education.summary }}</p> 
+        </div> -->
         {% endfor %}
       </section>
       <!-- end Education -->
