--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -67,16 +67,17 @@
               {% for award in education.awards %}
               <li>{{ award.award }}</li>
               {% endfor %}
-            </ul>
-
-
+            </ul> -->
           <p class="resume-item-copy">{{ education.summary }}</p> 
-        </div> -->
+        </div> 
+        
+        
         {% endfor %}
       </section>
       <!-- end Education -->
       {% endif %}
 
+      
       {% if site.resume_section_experience %}
       <!-- begin Experience -->
       <section class="content-section">
