--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -62,9 +62,9 @@
           <h3 class="resume-item-title" itemprop="name">{{ education.uni }}</h3>
           <h4 class="resume-item-details group" itemprop="description">{{ education.degree }} &bull; {{ education.year }}</h4>
         <!-- <h5 class="resume-item-details award-title" itemprop="description">{{ education.award }}</h5> -->
-         <!-- <p class="resume-item-copy" itemprop="description">
+         <p class="resume-item-copy" itemprop="description">
             <ul class="resume-item-list">
-              {% for award in education.awards %}
+           <!--    {% for award in education.awards %}
               <li>{{ award.award }}</li> 
               {% endfor %}
             </ul>
@@ -87,7 +87,7 @@
         </header>
 
         {% for job in site.data.experience %}
-        <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
+       <!-- <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization"> -->
           <h3 class="resume-item-title" itemprop="name">{{ job.company }}</h3>
           <h4 class="resume-item-details" itemprop="description">{{ job.position }} &bull; {{ job.duration }}</h4>
           <p class="resume-item-copy">{{ job.summary }}</p>
@@ -108,8 +108,8 @@
         </header>
 
         {% for project in site.data.projects %}
-        <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-          <meta itemprop="creator" content="{{ site.resume_name }}" itemtype="http://schema.org/Person" />
+     <!--   <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork"> -->
+       <!--   <meta itemprop="creator" content="{{ site.resume_name }}" itemtype="http://schema.org/Person" /> -->
           <h3 class="resume-item-title" itemprop="name">{% if project.url %}<a href="{{ project.url }}" itemprop="url">{{ project.project }}</a>{% else %}{{ project.project }}{% endif %}</h3>
           <h4 class="resume-item-details" itemprop="description">{{ project.role }}  &bull; {{ project.duration }}</h4>
           <p class="resume-item-copy">{{ project.description }}</p>
