--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -65,7 +65,7 @@
           <p class="resume-item-copy" itemprop="description">
             <ul class="resume-item-list">
              {% for award in education.awards %}
-              <li>{{ award.award }}</li> 
+             <!-- <li>{{ award.award }}</li> -->
               {% endfor %}
             </ul>
           <p class="resume-item-copy">{{ education.summary }}</p> 
