--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -62,12 +62,13 @@
           <h3 class="resume-item-title" itemprop="name">{{ education.uni }}</h3>
           <h4 class="resume-item-details group" itemprop="description">{{ education.degree }} &bull; {{ education.year }}</h4>
           <h5 class="resume-item-details award-title" itemprop="description">{{ education.award }}</h5>
+          <h6 class="resume-item-details award-title" itemprop="description">{{ education.award2 }}</h6>
           <p class="resume-item-copy" itemprop="description">
-            <ul class="resume-item-list">
+           <!-- <ul class="resume-item-list">
              {% for award in education.awards %}
-             <!-- <li>{{ award.award }}</li> -->
+             <li>{{ award.award }}</li>
               {% endfor %}
-            </ul>
+            </ul> -->
           <p class="resume-item-copy">{{ education.summary }}</p> 
         </div>
         
