--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -62,6 +62,7 @@
           <h3 class="resume-item-title" itemprop="name">{{ education.uni }}</h3>
           <h4 class="resume-item-details group" itemprop="description">{{ education.degree }} &bull; {{ education.year }}</h4>
           <h5 class="resume-item-details award-title" itemprop="description">{{ education.award }}</h5>
+          <h7 class="resume-item-details award-title" itemprop="description">{{ education.award1 }}</h7>
           <h6 class="resume-item-details award-title" itemprop="description">{{ education.award2 }}</h6>
           <p class="resume-item-copy" itemprop="description">
            <!-- <ul class="resume-item-list">
@@ -69,7 +70,9 @@
              <li>{{ award.award }}</li>
               {% endfor %}
             </ul> -->
-          <p class="resume-item-copy">{{ education.summary }}</p> 
+          <p class="resume-item-copy">{{ education.summary }}</p>
+          <p class="resume-item-copy">{{ education.summary1 }}</p> 
+          <p class="resume-item-copy">{{ education.summary2 }}</p> 
         </div>
         
         
