--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -64,14 +64,14 @@
           <h5 class="resume-item-details award-title" itemprop="description">{{ education.award }}</h5>
           <h7 class="resume-item-details award-title" itemprop="description">{{ education.award1 }}</h7>
           <h6 class="resume-item-details award-title" itemprop="description">{{ education.award2 }}</h6>
-          <p class="resume-item-copy" itemprop="description">
+          <!-- <p class="resume-item-copy" itemprop="description"> -->
            <!-- <ul class="resume-item-list">
              {% for award in education.awards %}
              <li>{{ award.award }}</li>
               {% endfor %}
             </ul> -->
           <p class="resume-item-copy">{{ education.summary }}</p>
-          <p class="resume-item-copy">{{ education.summary1 }}</p> 
+          
           <p class="resume-item-copy">{{ education.summary2 }}</p> 
         </div>
         
