--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -166,7 +166,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Projects</h2>
+          <h2>Associations</h2>
         </header>
 
         {% for association in site.data.associations %}
