--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -74,6 +74,8 @@
           
         </div>
         
+        <h6 class="resume-item-title" itemprop="name">{{ education.uni1 }}</h3>
+          <h7 class="resume-item-details group" itemprop="description">{{ education.degree1 }} 
         
         {% endfor %}
       </section>
