--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -57,23 +57,25 @@
 
         {% for education in site.data.education %}
         
-        <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
-          
-          <h3 class="resume-item-title" itemprop="name">{{ education.uni }}</h3>
-          <h4 class="resume-item-details group" itemprop="description">{{ education.degree }} & {{ education.year }}</h4>
-          <h5 class="resume-item-details award-title" itemprop="description">{{ education.award }}</h5>
-          <h6 class="resume-item-title" itemprop="name">{{ education.uni1 }}</h6>
-          <h7 class="resume-item-details group" itemprop="description">{{ education.degree1 }}</h7>
-          <!-- <p class="resume-item-copy" itemprop="description"> -->
-           <!-- <ul class="resume-item-list">
-             {% for award in education.awards %}
-             <li>{{ award.award }}</li>
-              {% endfor %}
-            </ul> -->
-          <p class="resume-item-copy">{{ education.summary }}</p>
-          
-          
-        </div>
+        <div class="resume-item" itemscope itemtype="http://schema.org/CollegeOrUniversity">
+
+  <h3 class="resume-item-title" itemprop="name">{{ education.uni }}</h3>
+  <h4 class="resume-item-details group" itemprop="description">{{ education.degree }} &bull; {{ education.year }}</h4>
+  <h5 class="resume-item-details award-title" itemprop="description">{{ education.award }}</h5>
+  <h6 class="resume-item-title" itemprop="name">{{ education.uni1 }}</h6>
+  <h7 class="resume-item-details group" itemprop="description">{{ education.degree1 }}</h7>
+  
+  <!-- Uncomment the following code block to include a list of awards -->
+  <!-- <ul class="resume-item-list">
+    {% for award in education.awards %}
+    <li>{{ award.award }}</li>
+    {% endfor %}
+  </ul> -->
+  
+  <p class="resume-item-copy" itemprop="description">{{ education.summary }}</p>
+
+</div>
+
         
         
         
