--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -63,7 +63,7 @@
         <h4 class="resume-item-details group" itemprop="description">{{ education.degree }} &bull; {{ education.year }}</h4>
         <h5 class="resume-item-details award-title" itemprop="description">{{ education.award }}</h5>
         <h6 class="resume-item-title" itemprop="name">{{ education.uni1 }}</h6>
-        <h7 class="resume-item-details group" itemprop="description">{{ education.degree1 }} &bull; {{ education.year1 }}</h7>
+        <h7 class="resume-item-details group" itemprop="description">{{ education.degree1 }}</h7>
   
   <!-- Uncomment the following code block to include a list of awards -->
   <!-- <ul class="resume-item-list">
