--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -66,7 +66,7 @@
     <li>{{ award.award }}</li>
     {% endfor %}
   </ul> -->
-  
+  <p>Graduate Certificate in Communication with Data</p>
   <p class="resume-item-copy" itemprop="description">{{ education.summary }}</p>
 
 </div>
