--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -59,6 +59,7 @@
         <div class="resume-item" itemscope itemtype=" ">
         <h3 class="resume-item-title" itemprop="name">{{ education.uni }}</h3>
         <h4 class="resume-item-details group" itemprop="description">{{ education.degree }} &bull; {{ education.year }}</h4>
+          <b>Graduate Certificate in Communication with Data</b>
         <h5 class="resume-item-details award-title" itemprop="description">{{ education.award }}</h5>
   <!-- Uncomment the following code block to include a list of awards -->
   <!-- <ul class="resume-item-list">
@@ -66,7 +67,7 @@
     <li>{{ award.award }}</li>
     {% endfor %}
   </ul> -->
-  <p>Graduate Certificate in Communication with Data</p>
+  <b>Graduate Certificate in Communication with Data</b>
   <p class="resume-item-copy" itemprop="description">{{ education.summary }}</p>
 
 </div>
