--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -58,11 +58,11 @@
         {% for education in site.data.education %}
         <div class="resume-item" itemscope itemtype=" ">
         <h3 class="resume-item-title" itemprop="name">{{ education.uni }}</h3>
-          <b>Master of Science in Information Design and Strategy , exp. 2025 GPA 3.9/4</b>
-          <b>Graduate Certificate in Communication with Data 2023</b>
-           <b>Master of Business Administration 2017 GPA 3.46/4</b>
-          <b>Graduate Certificate in Business Intelligence</b>
-          <b>Graduate Certificate in Human Resource Management</b>
+          <p <b>Master of Science in Information Design and Strategy , exp. 2025 GPA 3.9/4</b></p>
+          <p <b>Graduate Certificate in Communication with Data 2023</b></p>
+          <p <b>Master of Business Administration 2017 GPA 3.46/4</b></p>
+          <p <b>Graduate Certificate in Business Intelligence</b></p>
+          <p <b>Graduate Certificate in Human Resource Management</b></p>
        <!-- <h4 class="resume-item-details group" itemprop="description">{{ education.degree }} &bull; {{ education.year }}</h4>
         <h5 class="resume-item-details award-title" itemprop="description">{{ education.award }}</h5> -->
   <!-- Uncomment the following code block to include a list of awards -->
