--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -56,10 +56,13 @@
         </header>
 
         {% for education in site.data.education %}
-        <div class="resume-item" itemscope itemtype=" ">
-        <h3 class="resume-item-title" itemprop="name">{{ education.uni }}</h3>
+       <!-- <div class="resume-item" itemscope itemtype=" ">
+        <h3 class="resume-item-title" itemprop="name">{{ education.uni }}</h3> -->
+        <h3>Master of Science in Information Design and Strategy</h3>
           <p><b>Master of Science in Information Design and Strategy , exp. 2025 GPA 3.9/4</b></p>
           <p><b>Graduate Certificate in Communication with Data 2023</b></p>
+        
+        <h4>Master of Business Administration</h4>
           <p><b>Master of Business Administration 2017 GPA 3.46/4</b></p>
           <p><b>Graduate Certificate in Business Intelligence</b></p>
           <p><b>Graduate Certificate in Human Resource Management</b></p>
