--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -50,8 +50,8 @@
 
       {% if site.resume_section_education %}
       <!-- begin Education -->
-      <section class="content-section">
-        <header class="section-header">
+    <!--  <section class="content-section"> -->
+        <header class="section-header"> 
           <h2>Education</h2>
         </header>
 
@@ -84,7 +84,7 @@
         
         
         {% endfor %}
-      </section>
+    <!--  </section> -->
       <!-- end Education -->
       {% endif %}
 
