--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -63,9 +63,9 @@
           <p><b>Graduate Certificate in Communication with Data 2023</b></p>
         
         <h4>Master of Business Administration</h4>
-          <p><b>Master of Business Administration 2017 GPA 3.46/4</b></p>
-          <p><b>Graduate Certificate in Business Intelligence</b></p>
-          <p><b>Graduate Certificate in Human Resource Management</b></p>
+          <a<b>Master of Business Administration 2017 GPA 3.46/4</b></a>
+          <a<b>Graduate Certificate in Business Intelligence</b></a>
+          <a<b>Graduate Certificate in Human Resource Management</b></a>
        <!-- <h4 class="resume-item-details group" itemprop="description">{{ education.degree }} &bull; {{ education.year }}</h4>
         <h5 class="resume-item-details award-title" itemprop="description">{{ education.award }}</h5> -->
   <!-- Uncomment the following code block to include a list of awards -->
