--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -56,7 +56,7 @@
         </header>
 
         {% for education in site.data.education %}
-       <div class="resume-item" itemscope itemtype=" ">
+      <!--<div class="resume-item" itemscope itemtype=" ">
        <h3 class="resume-item-title" itemprop="name">{{ education.uni }}</h3>
        <h4 class="resume-item-details group" itemprop="description">{{ education.degree }} &bull; {{ education.year }}</h4>
        <h5 class="resume-item-details award-title" itemprop="description">{{ education.award }}</h5>
@@ -66,12 +66,19 @@
     <li>{{ award.award }}</li>
     {% endfor %}
   </ul> -->
-<p class="resume-item-copy" itemprop="description">{{ education.summary }}</p>
+<!--<p class="resume-item-copy" itemprop="description">{{ education.summary }}</p>
 
 </div>
+        -->
         
-        
-
+<div>
+  <a Northwestern University</a>
+  <a Master of Science in Information Design and Strategy</a>
+    <a exp. 2025
+       GPA 3.9/4</a>
+  
+    
+</div>
         
         
         
