--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -72,9 +72,9 @@
         -->
         
 <div>
-  <a Northwestern University</a>
-  <a Master of Science in Information Design and Strategy</a>
-    <a exp. 2025
+  <a>Northwestern University</a>
+  <a>Master of Science in Information Design and Strategy</a>
+    <a>exp. 2025
        GPA 3.9/4</a>
   
     
