--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -56,29 +56,21 @@
         </header>
 
         {% for education in site.data.education %}
-      <!--<div class="resume-item" itemscope itemtype=" ">
+      <div class="resume-item" itemscope itemtype=" ">
        <h3 class="resume-item-title" itemprop="name">{{ education.uni }}</h3>
        <h4 class="resume-item-details group" itemprop="description">{{ education.degree }} &bull; {{ education.year }}</h4>
        <h5 class="resume-item-details award-title" itemprop="description">{{ education.award }}</h5>
   <!-- Uncomment the following code block to include a list of awards -->
-  <!-- <ul class="resume-item-list">
+  <ul class="resume-item-list">
     {% for award in education.awards %}
     <li>{{ award.award }}</li>
     {% endfor %}
-  </ul> -->
-<!--<p class="resume-item-copy" itemprop="description">{{ education.summary }}</p>
+  </ul>
+<p class="resume-item-copy" itemprop="description">{{ education.summary }}</p>
 
 </div>
-        -->
-        
-<div>
-  <a>Northwestern University</a>
-  <a>Master of Science in Information Design and Strategy</a>
-    <a>exp. 2025
-       GPA 3.9/4</a>
+       
   
-    
-</div>
         
         
         
