--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -126,10 +126,10 @@
       <!-- begin Skills -->
       <section class="content-section">
 
-       <!-- <header class="section-header">
-          <h2>Skills</h2> 
+       <header class="section-header">
+         <!-- <h2>Skills</h2> -->
         </header>
-        {% for skill in site.data.skills %} -->
+        {% for skill in site.data.skills %} 
         <div class="resume-item">
           <h4 class="resume-item-details">{{ skill.skill }}</h4>
           <p class="resume-item-copy">{{ skill.description }}</p>
