--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -145,7 +145,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Recognition</h2>
+          <h2>Software</h2>
         </header>
 
         {% for recognition in site.data.recognitions %}
