--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -149,13 +149,18 @@
         </header>
 
         {% for recognition in site.data.recognitions %}
-      <!--  <div class="resume-item">
+       <div class="resume-item">
           <h3 class="resume-item-title" itemprop="award">{{ recognition.award }}</h3>
          <h4 class="resume-item-details">{{ recognition.organization }} &bull; {{ recognition.year }}</h4> 
           <p class="resume-item-copy">{{ recognition.summary }}</p>
-        </div> -->
+        </div> 
         {% endfor %}
 
+     
+        
+        
+        
+        
       </section>
       <!-- end Recognition -->
       {% endif %}
