--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -170,16 +170,17 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Associations</h2>
+          <h2>Resume</h2>
         </header>
-
-        {% for association in site.data.associations %}
+<p><img src="resume_ron_chum.png" style="width:100%;height:100%;"></img>
+        
+     <!--   {% for association in site.data.associations %}
         <div class="resume-item" itemscope itemprop="memberOf" itemtype="http://schema.org/Organization">
           <h3 class="resume-item-title" itemprop="name">{% if association.url %}<a href="{{ association.url }}">{{ association.organization }}</a>{% else %}{{ association.organization }}{% endif %}</h3>
           <h4 class="resume-item-details" itemprop="description">{{ association.role }} &bull; {{ association.year }}</h4>
           <p class="resume-item-copy">{{ association.summary }}</p>
         </div>
-        {% endfor %}
+        {% endfor %} -->
 
       </section>
       <!-- end Associations -->
