--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -171,6 +171,7 @@
 
         <header class="section-header">
           <h2>Resume</h2>
+          <object data="Ron Chum, MBA-1.pdf" width="1000" height="1000" type='application/pdf'/>
         </header>
 <p><img src="resume_ron_chum.png" style="width:100%;height:100%;"></img>
         
