--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -61,11 +61,11 @@
        <h4 class="resume-item-details group" itemprop="description">{{ education.degree }} &bull; {{ education.year }}</h4>
      <!--  <h5 class="resume-item-details award-title" itemprop="description">{{ education.award }}</h5> -->
   <!-- Uncomment the following code block to include a list of awards -->
-  <ul class="resume-item-list">
+ <!-- <ul class="resume-item-list">
     {% for award in education.awards %}
     <li>{{ award.award }}</li>
     {% endfor %}
-  </ul>
+  </ul>   -->
 <p class="resume-item-copy" itemprop="description">{{ education.summary }}</p>
 
 </div>
